--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 <h2>Welcome to Attendance System</h2>
                 <p>Department of Philosophy</p>
                 <p>University of Chittagong</p>
+                <p>Developed by. Md Imam Hossain</p>
                 <div class="welcome-number">1</div>
                 <p class="welcome-loading">Loading system...</p>
             </div>
@@ -393,3 +394,4 @@
     </script>
 </body>
 </html>
+
