--- a/index.html
+++ b/index.html
@@ -96,7 +96,13 @@
                 <button type="submit" class="btn btn-login">
                     <i class="fas fa-sign-in-alt"></i> Login
                 </button>
-                
+<div class="demo-credentials">
+                    <p><strong>Demo Access:</strong><br>Username: <code>teacher</code><br>Password: <code>philosophy123</code></p>
+                    <p class="demo-warning">Change these credentials for production use</p>
+                </div>
+            </form>
+        </div>
+    </div>                
     
     <!-- Main Dashboard -->
     <div id="dashboardScreen" class="hidden">
@@ -402,5 +408,6 @@
     </script>
 </body>
 </html>
+
 
 
