--- a/index.html
+++ b/index.html
@@ -469,17 +469,16 @@
     </div>
 
     <script>
-        // Welcome screen display for 3 seconds
-        document.addEventListener('DOMContentLoaded', function() {
-            setTimeout(() => {
-                document.getElementById('welcomeScreen').classList.add('hidden');
-                const isAutoLoggedIn = checkAutoLogin();
-                
-                if (!isAutoLoggedIn) {
-                    document.getElementById('loginScreen').classList.remove('hidden');
-                }
-            }, 3000);
-        });
-    </script>
+  // Welcome screen display for 3 seconds
+  document.addEventListener('DOMContentLoaded', function() {
+    setTimeout(() => {
+      document.getElementById('welcomeScreen').classList.add('hidden');
+      // Auto-login will be handled by app.js
+      // Don't call checkAutoLogin here as it's already in app.js
+    }, 3000);
+  });
+</script>
+            
 </body>
 </html>
+
